ProgettoDSBD/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - host: cluster.dsbd.it
      http:
        paths:
          - path: /menu(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: menu-microservice
                port:
                  number: 8080
          - path: /ordini(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ordini-microservice
                port:
                  number: 8080
          - path: /pietanze(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pietanze-microservice
                port:
                  number: 8080
